# aruco_slam_ailab

./: .cursorrules  CMakeLists.txt  README.md  REPORT.md  package.xml  setup.cfg  setup.py
config/: fastdds_profile.xml  slam_params.yaml  slam_params_real.yaml  slam_params_sim.yaml  slam_rviz.rviz
docker/: bashrc_ros.sh
include/aruco_sam_ailab/: utility.hpp
include/aruco_slam_ailab/: utility.hpp
launch/: aruco_slam.launch.py  aruco_slam_full.launch.py  aruco_slam_imu_only.launch.py  aruco_slam_vision_imu.launch.py  aruco_slam_vision_only.launch.py  hardware.launch.py
map/: landmarks_map.json
models/aruco_box/: model.sdf
models/aruco_box/materials/scripts/: aruco_markers.material
models/aruco_box/materials/textures/: generate_aruco_markers.py
msg/: MarkerArray.msg  MarkerObservation.msg  OptimizedKeyframeState.msg
rviz/: aruco_detection_debug.rviz  aruco_viz.rviz
scripts/: ego_state_publisher.py  evaluate_real.py  evaluate_slam.py  landmark_boundary_occupancy_grid_node.py  record_slam_bag.sh  run_eval.sh  run_eval_real.sh  visualize_gt_markers.py
src/: aruco_detector_node.cpp  ekf_smoother.cpp  graph_optimizer.cpp  imu_preintegration.cpp  wheel_odom_node.cpp
